# therm-reporter

./: README.md  therm-reporter.cabal
app/: Main.hs
pi/: therm_reporter.py
sql/: create.sql
src/ThermReporter/: Persist.hs  Types.hs  Webservice.hs  Websockets.hs
static/: app.js  index.html
